chore(MainLayout): add overflow-x hidden to prevent horizontal scrolling in MainLayout component
chore(SinaAppBar): change width property to 100% in SinaAppBar component for better responsiveness

chore(SinaCardHeader): change column-gap property to 1rem in SinaCardHeader component for better spacing

chore(SinaDrawer): add position sticky and top 0 to SinaDrawer component for sticky behavior

chore(SinaDrawer): change height property to 100vh in SinaDrawer component for full height

chore(SinaMainCard): change margin property to .5rem in SinaMainCard component for better spacing

chore(SinaTable): change margin property to .5rem in SinaTable component for better spacing

chore(SinaTable): change width property to 98% in SinaTable component for better responsiveness

--- a/src/components/atoms/MainLayout/mainlayout.module.css
+++ b/src/components/atoms/MainLayout/mainlayout.module.css
@@ -5,4 +5,5 @@
     display: grid;
     grid-template-columns: auto 1fr;
     grid-template-rows: 10vh 1fr;
+    overflow-x: hidden;
 }
