--- a/src/components/molecules/SinaCardHeader/sinacardheader.module.css
+++ b/src/components/molecules/SinaCardHeader/sinacardheader.module.css
@@ -5,7 +5,7 @@
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto;
-    column-gap: 3vw;
+    column-gap: 1rem;
     padding: 0 1rem;
     margin:1rem 0;
     align-items: center;
