--- a/src/components/molecules/SinaDrawer/sinadrawer.module.css
+++ b/src/components/molecules/SinaDrawer/sinadrawer.module.css
@@ -7,12 +7,15 @@
     border-radius: var(--borderRadius, 4px);
     background: var(--background-paper-elevation-1, #FFF);
     box-shadow: 1px 1px 20px 0px rgba(0, 0, 0, 0.12);
+    position: sticky;
+    top: 0;
     display: grid;
     grid-template-columns: auto 1fr auto;
     grid-template-rows: auto 1fr auto;
     justify-items: center;
     gap: 10px;
     transition: 0.3s ease-in-out;
+    
 }
 
 .top_brand {
@@ -65,7 +68,7 @@
     box-sizing: border-box;
     grid-column: 1/2;
     grid-row: 1/3;
-    height: 100%;
+    height: 100vh;
     width: 10vw;
     border-radius: var(--borderRadius, 4px);
     background: var(--background-paper-elevation-1, #FFF);
@@ -78,4 +81,6 @@
     gap: 10px;
     transition: width 0.3s ease-in-out;
     padding: 10px;
+    position: sticky;
+    top: 0;
 }
