--- a/src/components/organisms/SinaTable/sinatable.module.css
+++ b/src/components/organisms/SinaTable/sinatable.module.css
@@ -1,6 +1,8 @@
 .sinatable_container {
     box-sizing: border-box;
-    width: 100%;
+    grid-row: 2/3;
+    grid-column: 1/2;
+    width: 98%;
     display: grid;
     grid-template-rows: 1fr auto;
 }
